# doom-ls

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs
editors/vscode/: LICENSE  package-lock.json  package.json
editors/vscode/langs/: acs.cfg.json  zscript.cfg.json
editors/vscode/langs/zscript/: lang-config.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: wadmerge.tmLanguage.json  zscript.tmLanguage.json
src/: _project.rs  _zscript.rs  arena.rs  core.rs  data.rs  db.rs  error.rs  front.rs  frontend.rs  intern.rs  langs.rs  lib.rs  lines.rs  main.rs  names.rs  notif.rs  pathintern.rs  paths.rs  project.rs  request.rs  scan.rs  semtok.rs  semtokens.rs  setup.rs  test.rs  util.rs  zpath.rs  zscript.rs
src/_zscript/: data.rs
src/front/: intern.rs  mem.rs  sym.rs
src/langs/: cvarinfo.rs  zscript.rs
src/langs/cvarinfo/: sema.rs
src/langs/zscript/: decl.rs  define.rs  docsym.rs  docsymbols.rs  expand.rs  goto.rs  goto_def.rs  help.rs  highlight.rs  hover.rs  inctree.rs  internal.rs  native.rs  parse.rs  sema.rs  semtok.rs
src/langs/zscript/define/: class.rs  enumeration.rs  field.rs  function.rs  structure.rs
src/langs/zscript/hover/: keyword.rs
src/zscript/: data.rs  highlight.rs  sema.rs
