[package]
name = "doom-ls"
version = "0.0.0"
edition = "2021"

authors = ["jerome-trc"]
description = "Language server for Doom DSLs"
homepage = "https://github.com/jerome-trc/doom-ls/"
keywords = ["doom", "ide", "language-server", "lsp"]
license = "MIT OR Apache-2.0"
publish = false
repository = "https://github.com/jerome-trc/doom-ls/"

[profile.release]
strip = true
opt-level = 3
# TODO: `lto = true` later.
codegen-units = 4

[dependencies]
doomfront = { path = "../viletech/doomfront", features = [
	"zdoom"
] } # Temporary local path.

bitflags = "2.3.1"
lsp-server = "0.7"
lsp-types = "0.94"
rustc-hash = "1.0.1"
salsa = "0.16.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
