[package]
name = "doom-ls"
version = "0.0.0"
edition = "2021"

authors = ["jerome-trc"]
description = "Language server for Doom DSLs"
homepage = "https://github.com/jerome-trc/doom-ls/"
keywords = ["doom", "ide", "language-server", "lsp"]
license = "MIT OR Apache-2.0"
publish = false
repository = "https://github.com/jerome-trc/doom-ls/"

[profile.release]
strip = true
opt-level = 3
# TODO: `lto = true` later.
codegen-units = 4

[dependencies]
doomfront = { path = "../viletech/doomfront", features = [
	"zdoom",
] } # Temporary local path.

bitflags = "2.3.1"
crossbeam-channel = "0.5.8"
indexmap = { version = "1.9.3", features = ["rayon"] }
indoc = "2.0.3"
lsp-server = "0.7"
lsp-types = "0.94"
nohash-hasher = "0.2.0"
parking_lot = { version = "0.12.1", features = ["arc_lock"] }
petgraph = "0.6.3"
rayon = "1.7.0"
regex = "1.9.1"
rustc-hash = "1.0.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
slotmap = "1.0.6"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
walkdir = "2.3.2"

[build-dependencies]
regex = "1.9.1"
toml = "0.7.4"
