[package]
name = "doom-ls"
version = "0.0.0"
edition = "2021"

authors = ["jerome-trc"]
description = "Language server for Doom DSLs"
homepage = "https://github.com/jerome-trc/doom-ls/"
keywords = ["doom", "ide", "language-server", "lsp"]
license = "MIT OR Apache-2.0"
publish = false
repository = "https://github.com/jerome-trc/doom-ls/"

[profile.release]
strip = true
opt-level = 3
# TODO: `lto = true` later.
codegen-units = 4

[dependencies]
doomfront = { path = "../viletech/doomfront", features = [
	"zdoom",
] } # Temporary local path.

append-only-vec = "0.1.3"
bitflags = "2.3.1"
bumpalo = "3.14.0"
crossbeam = "0.8.2"
dashmap = "5.5.3"
im = "15.1.0"
indoc = "2.0.3"
lsp-server = "0.7.4"
lsp-types = "0.94.1"
nohash-hasher = "0.2.0"
parking_lot = { version = "0.12.1", features = ["arc_lock"] }
rayon = "1.7.0"
regex = "1.9.5"
rustc-hash = "1.0.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
strsim = "0.10.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
triomphe = "0.1.8"

[build-dependencies]
